Fixed movies spacing in small view

--- a/src/css/medium.css
+++ b/src/css/medium.css
@@ -9,16 +9,7 @@
   .text_hero {
     font-size: 19px;
   }
-  #movie_section {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    column-gap: 15px;
-    margin-top: 25px;
-    margin: 0 auto;
-    gap: 1rem;
-    margin-bottom: 2rem;
-    padding: 1rem;
-  }
+
   .movie-short-info {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
